--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>RxJs</title>
 </head>
 <body>
-    <div>hello</div>
+    <div>hello vlado 4</div>
     <script src="app.js" ></script>
 </body>
 </html>
