backend and new files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 </head>
 <body>
     <div>hello vlado 4</div>
+    <button id="getBooksButton" >get books</button>
+    <div id="output">
+
+    </div>
+
     <script src="app.js" ></script>
 </body>
 </html>
