--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <html>
+
 <head>
     <title>RxJs</title>
+    
 </head>
+
 <body>
-    <div>hello vlado 4</div>
-    <button id="getBooksButton" >get books</button>
+    <div style="margin: 30px;" >hello world</div>
+    <br/>
+    <button style="margin: 30px;" id="button">button</button>
     <div id="output">
 
     </div>
 
-    <script src="app.js" ></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
