--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<html>
+<html lang="en">
 
 <head>
     <title>RxJs</title>
-    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/js/bootstrap.min.js" /> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 </head>
 
 <body>
-    <div style="margin: 30px;" >hello world</div>
-    <br/>
-    <button style="margin: 30px;" id="button">button</button>
+    <div class="jumbotron text-center">Rx hello world</div>
+    <br />
+    <button class="button text-center" style="margin: 30px;" id="button">button</button>
     <div id="output">
 
     </div>
