--- a/currency.html
+++ b/currency.html
@@ -4,8 +4,7 @@
     <title>currency converter</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -16,15 +15,15 @@
     </div>
     <fieldset style="margin: 30px;">
         <legend><strong>choose a currency</strong></legend>
-        <input class="form-check-input" type="radio" name="targetCurrency" value="USD" checked />
+       <input type="radio" name="targetCurrency" value="USD" checked class="form-check-input" />
         <div class="form-check-label">$ (USD)</div>
-        <input class="form-check-input" type="radio" name="targetCurrency" value="EUR" />
+       <input type="radio" name="targetCurrency" value="EUR" class="form-check-input" />
         <div class="form-check-label">€ (EUR)</div>
-        <input class="form-check-input" type="radio" name="targetCurrency" value="GBP" />
+       <input type="radio" name="targetCurrency" value="GBP" class="form-check-input" />
         <div class="form-check-label">£ (GBP)</div>
-        <input class="form-check-input" type="radio" name="targetCurrency" value="DEN" />
+       <input type="radio" name="targetCurrency" value="DEN" class="form-check-input" />
         <div class="form-check-label">DEN</div>
-        <input class="form-check-input" type="radio" name="targetCurrency" value="BTC" />
+       <input type="radio" name="targetCurrency" value="BTC" class="form-check-input" />
         <div class="form-check-label">₿ (BTC)</div>
     </fieldset>
     
